--- a/6. css grid/style.css
+++ b/6. css grid/style.css
@@ -4,8 +4,7 @@ body {
     display: grid;
     grid-template-areas: 'top top top top' 
     'nav content sidebar sidebar2'
-    'nav footer footer footer'
-    ;
+    'nav footer footer footer';
     grid-template-columns: 1fr 4fr 1fr 1fr;
     grid-template-rows: 60px 1fr 80px;
 }
